# widecoin

./: .appveyor.yml  .cirrus.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libwidecoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  good_first_issue.md  good_first_issue.yml  gui_issue.yml
.tx/: config
build_msvc/: README.md  msvc-autogen.py  vcpkg.json  widecoin.sln  widecoin_config.h  widecoin_config.h.in
ci/: lint_imagefile  lint_run_all.sh  test_imagefile  test_run_all.sh
contrib/: README.md  gitian-build.py  gitian-build.sh  install_db4.sh  tidy_datadir.sh  valgrind.supp  widecoin-cli.bash-completion  widecoin-qt.pro  widecoind.bash-completion
contrib/devtools/widecoin-tidy/: CMakeLists.txt  README  example_logprintf.cpp  logprintf.cpp  logprintf.h  widecoin-tidy.cpp
depends/: README.md  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_osx.md  README_windows.txt  REST-interface.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  tracing.md  translation_process.md  translation_strings_policy.md  travis-ci.md  zmq.md
share/: genbuild.sh  setup.nsi.in
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bip324.cpp  bip324.h  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind.cpp  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  bloom.cpp  bloom.h  chain.cpp  chain.h  (+148 more)
test/: README.md  config.ini.in  get_previous_releases.py
(+1519 files in other folders)
